// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ProductsPageComponent should not render the template when there is no VM provided 1`] = `
<div
  id="root0"
  ng-version="20.1.7"
>
  <!--container-->
</div>
`;

exports[`ProductsPageComponent should render 1 <app-product-item> if 1 items are provided 1`] = `
<div
  id="root2"
  ng-version="20.1.7"
>
  <app-page-layout>
    <section
      class="page-layout"
    >
      <app-frame>
        <section
          class="frame"
        >
          <div
            header=""
          >
            <h2>
              title0
            </h2>
            <!--container-->
          </div>
          <app-product-list>
            <div
              class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 transition-all place-items-center"
            >
              <app-card
                class="cursor-pointer min-w-80 max-w-96"
                style="height: 500px;"
              >
                <div
                  class="card"
                >
                  <img
                    alt="productAltText0"
                    class="object-none"
                    media=""
                    src="assets/lepke.jpg"
                  />
                  <app-card-body
                    class="h-52"
                  >
                    <div
                      class="card-body"
                    >
                      <div
                        header=""
                      >
                        <h3
                          title=""
                        >
                           productAltText0 
                        </h3>
                      </div>
                      <p>
                         productDescription0 
                      </p>
                    </div>
                  </app-card-body>
                </div>
              </app-card>
              <!--container-->
            </div>
          </app-product-list>
        </section>
        <!--container-->
      </app-frame>
    </section>
  </app-page-layout>
  <!--container-->
  <!--container-->
</div>
`;

exports[`ProductsPageComponent should render 5 <app-product-item> if 5 items are provided 1`] = `
<div
  id="root3"
  ng-version="20.1.7"
>
  <app-page-layout>
    <section
      class="page-layout"
    >
      <app-frame>
        <section
          class="frame"
        >
          <div
            header=""
          >
            <h2>
              title0
            </h2>
            <!--container-->
          </div>
          <app-product-list>
            <div
              class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 transition-all place-items-center"
            >
              <app-card
                class="cursor-pointer min-w-80 max-w-96"
                style="height: 500px;"
              >
                <div
                  class="card"
                >
                  <img
                    alt="productAltText0"
                    class="object-none"
                    media=""
                    src="assets/lepke.jpg"
                  />
                  <app-card-body
                    class="h-52"
                  >
                    <div
                      class="card-body"
                    >
                      <div
                        header=""
                      >
                        <h3
                          title=""
                        >
                           productAltText0 
                        </h3>
                      </div>
                      <p>
                         productDescription0 
                      </p>
                    </div>
                  </app-card-body>
                </div>
              </app-card>
              <app-card
                class="cursor-pointer min-w-80 max-w-96"
                style="height: 500px;"
              >
                <div
                  class="card"
                >
                  <img
                    alt="productAltText1"
                    class="object-none"
                    media=""
                    src="assets/lepke.jpg"
                  />
                  <app-card-body
                    class="h-52"
                  >
                    <div
                      class="card-body"
                    >
                      <div
                        header=""
                      >
                        <h3
                          title=""
                        >
                           productAltText1 
                        </h3>
                      </div>
                      <p>
                         productDescription1 
                      </p>
                    </div>
                  </app-card-body>
                </div>
              </app-card>
              <app-card
                class="cursor-pointer min-w-80 max-w-96"
                style="height: 500px;"
              >
                <div
                  class="card"
                >
                  <img
                    alt="productAltText2"
                    class="object-none"
                    media=""
                    src="assets/lepke.jpg"
                  />
                  <app-card-body
                    class="h-52"
                  >
                    <div
                      class="card-body"
                    >
                      <div
                        header=""
                      >
                        <h3
                          title=""
                        >
                           productAltText2 
                        </h3>
                      </div>
                      <p>
                         productDescription2 
                      </p>
                    </div>
                  </app-card-body>
                </div>
              </app-card>
              <app-card
                class="cursor-pointer min-w-80 max-w-96"
                style="height: 500px;"
              >
                <div
                  class="card"
                >
                  <img
                    alt="productAltText1"
                    class="object-none"
                    media=""
                    src="assets/lepke.jpg"
                  />
                  <app-card-body
                    class="h-52"
                  >
                    <div
                      class="card-body"
                    >
                      <div
                        header=""
                      >
                        <h3
                          title=""
                        >
                           productAltText1 
                        </h3>
                      </div>
                      <p>
                         productDescription1 
                      </p>
                    </div>
                  </app-card-body>
                </div>
              </app-card>
              <app-card
                class="cursor-pointer min-w-80 max-w-96"
                style="height: 500px;"
              >
                <div
                  class="card"
                >
                  <img
                    alt="productAltText2"
                    class="object-none"
                    media=""
                    src="assets/lepke.jpg"
                  />
                  <app-card-body
                    class="h-52"
                  >
                    <div
                      class="card-body"
                    >
                      <div
                        header=""
                      >
                        <h3
                          title=""
                        >
                           productAltText2 
                        </h3>
                      </div>
                      <p>
                         productDescription2 
                      </p>
                    </div>
                  </app-card-body>
                </div>
              </app-card>
              <!--container-->
            </div>
          </app-product-list>
        </section>
        <!--container-->
      </app-frame>
    </section>
  </app-page-layout>
  <!--container-->
  <!--container-->
</div>
`;

exports[`ProductsPageComponent should render the template when the VM is provided 1`] = `
<div
  id="root1"
  ng-version="20.1.7"
>
  <app-page-layout>
    <section
      class="page-layout"
    >
      <app-frame>
        <section
          class="frame"
        >
          <div
            header=""
          >
            <h2>
              title0
            </h2>
            <!--container-->
          </div>
          <app-product-list>
            <div
              class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 transition-all place-items-center"
            >
              <app-card
                class="cursor-pointer min-w-80 max-w-96"
                style="height: 500px;"
              >
                <div
                  class="card"
                >
                  <img
                    alt="productAltText0"
                    class="object-none"
                    media=""
                    src="assets/lepke.jpg"
                  />
                  <app-card-body
                    class="h-52"
                  >
                    <div
                      class="card-body"
                    >
                      <div
                        header=""
                      >
                        <h3
                          title=""
                        >
                           productAltText0 
                        </h3>
                      </div>
                      <p>
                         productDescription0 
                      </p>
                    </div>
                  </app-card-body>
                </div>
              </app-card>
              <app-card
                class="cursor-pointer min-w-80 max-w-96"
                style="height: 500px;"
              >
                <div
                  class="card"
                >
                  <img
                    alt="productAltText1"
                    class="object-none"
                    media=""
                    src="assets/lepke.jpg"
                  />
                  <app-card-body
                    class="h-52"
                  >
                    <div
                      class="card-body"
                    >
                      <div
                        header=""
                      >
                        <h3
                          title=""
                        >
                           productAltText1 
                        </h3>
                      </div>
                      <p>
                         productDescription1 
                      </p>
                    </div>
                  </app-card-body>
                </div>
              </app-card>
              <app-card
                class="cursor-pointer min-w-80 max-w-96"
                style="height: 500px;"
              >
                <div
                  class="card"
                >
                  <img
                    alt="productAltText2"
                    class="object-none"
                    media=""
                    src="assets/lepke.jpg"
                  />
                  <app-card-body
                    class="h-52"
                  >
                    <div
                      class="card-body"
                    >
                      <div
                        header=""
                      >
                        <h3
                          title=""
                        >
                           productAltText2 
                        </h3>
                      </div>
                      <p>
                         productDescription2 
                      </p>
                    </div>
                  </app-card-body>
                </div>
              </app-card>
              <!--container-->
            </div>
          </app-product-list>
        </section>
        <!--container-->
      </app-frame>
    </section>
  </app-page-layout>
  <!--container-->
  <!--container-->
</div>
`;
